<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.chase.kudzie.chasemusic.domain.model.Album" />

        <variable
            name="artist"
            type="com.chase.kudzie.chasemusic.domain.model.Artist" />

        <variable
            name="loadListener"
            type="com.chase.kudzie.chasemusic.util.GlideDrawableLoadListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:overScrollMode="never"
        android:transitionName="album_shared_element">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:marginTopSystemWindowInsets="@{true}"
                app:navigationIcon="@drawable/ic_arrow_back" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_artwork"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/colorBackgroundFallback"
                app:cardCornerRadius="12dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <ImageView
                    android:id="@+id/album_artwork"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_artwork"
                    android:scaleType="centerCrop"
                    app:album_artwork="@{album.id}"
                    app:load_listener="@{loadListener}"
                    app:placeholder="@{@drawable/album_placeholder}"
                    tools:srcCompat="@tools:sample/avatars[4]" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/artist_image"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:artist_artwork="@{artist}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/card_artwork"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <TextView
                android:id="@+id/album_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="2"
                android:text="@{album.title}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toStartOf="@+id/menu_button"
                app:layout_constraintStart_toEndOf="@+id/artist_image"
                app:layout_constraintTop_toTopOf="@+id/artist_image"
                tools:text="All this Bad Blood (Deluxe Edition)" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@{album.artistName}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/album_name"
                app:layout_constraintStart_toStartOf="@+id/album_name"
                app:layout_constraintTop_toBottomOf="@+id/album_name"
                tools:text="Bastille" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/artist_image"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/card_artwork"
                app:srcCompat="@drawable/ic_more_vertical" />

            <TextView
                android:id="@+id/label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/songs"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/artist_image" />

            <Button
                android:id="@+id/btn_shuffle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shuffle_play"
                app:icon="@drawable/ic_shuffle"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/label_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songs_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_shuffle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
